--- a/README.org
+++ b/README.org
@@ -1,7 +1,11 @@
 # org
 * wtf fuer anfänger so neu aufm puter
 * #granny simsalabim
-* TODO neuer Kram
+* DONE neuer Kram
+CLOSED: [2023-01-18 Wed 12:11]
+:LOGBOOK:
+- State "DONE"       from "TODO"       [2023-01-18 Wed 12:11]
+:END:
 * da kommt noch mehr
 * TODO Das reicht nicht!
 :LOGBOOK:
@@ -9,8 +13,10 @@
 - State "DONE"       from "TODO"       [2023-01-18 Wed 11:36]
 :END:
 * miaumio
-* STARTED da geht noch mehr
+* DONE da geht noch mehr
+CLOSED: [2023-01-18 Wed 12:10]
 :LOGBOOK:
+- State "DONE"       from "STARTED"    [2023-01-18 Wed 12:10]
 - State "STARTED"    from              [2023-01-18 Wed 11:36]
 :END:
 * da geht noch viel mehr, oder?
