--- a/README.org
+++ b/README.org
@@ -2,7 +2,7 @@
 * wtf fuer anfänger so neu aufm puter
 * #granny simsalabim
 * TODO neuer Kram
-* So ein Quatsch
+* So ein Quatsch (neu alt vom puter)
 * da kommt noch mehr
 * TODO Das reicht nicht!
 * da geht noch mehr
