--- a/privat.org
+++ b/privat.org
@@ -1,1 +1,5 @@
-* TODO Willkommen Christian
+* DONE Willkommen Christian
+CLOSED: [2023-01-18 Wed 13:08]
+:LOGBOOK:
+- State "DONE"       from "TODO"       [2023-01-18 Wed 13:08]
+:END:
