--- a/privat.org
+++ b/privat.org
@@ -1,5 +1,7 @@
-* DONE Willkommen Christian
-CLOSED: [2023-01-18 Wed 13:08]
+* STARTED Willkommen Christian
 :LOGBOOK:
+- State "STARTED"    from "DONE"       [2023-01-18 Wed 13:13]
+- State "DONE"       from "TODO"       [2023-01-18 Wed 13:12]
+- State "TODO"       from "DONE"       [2023-01-18 Wed 13:12]
 - State "DONE"       from "TODO"       [2023-01-18 Wed 13:08]
 :END:
