--- a/privat.org
+++ b/privat.org
@@ -1,3 +1,7 @@
+* TODO Neuer Scheiß aus’m kalten Wohnzimmer
+:LOGBOOK:
+- State "TODO"       from              [2023-01-18 Wed 13:38]
+:END:
 * TODO Willkommen Christian
 * STARTED Rastafari
 :LOGBOOK:
