--- a/privat.org
+++ b/privat.org
@@ -1,5 +1,7 @@
-* TODO Neuer Scheiß aus’m kalten Wohnzimmer
+* DONE Neuer Scheiß aus’m kalten Wohnzimmer
+CLOSED: [2023-01-18 Wed 13:56]
 :LOGBOOK:
+- State "DONE"       from "TODO"       [2023-01-18 Wed 13:56]
 - State "TODO"       from              [2023-01-18 Wed 13:38]
 :END:
 * TODO Willkommen Christian
