--- a/privat.org
+++ b/privat.org
@@ -1,10 +1,21 @@
-* TODO Neuer Scheiß aus’m kalten Wohnzimmer
+* STARTED Neuer Scheiß aus’m kalten Wohnzimmer
 :LOGBOOK:
+- State "STARTED"    from "TODO"       [2023-01-18 Wed 14:07]
+- State "TODO"       from "DONE"       [2023-01-18 Wed 14:07]
+- State "DONE"       from "TODO"       [2023-01-18 Wed 14:07]
 - State "TODO"       from "DONE"       [2023-01-18 Wed 14:01]
 - State "DONE"       from "TODO"       [2023-01-18 Wed 13:56]
 - State "TODO"       from              [2023-01-18 Wed 13:38]
 :END:
 * TODO Willkommen Christian
+:LOGBOOK:
+- State "TODO"       from "DONE"       [2023-01-18 Wed 14:07]
+- State "DONE"       from "TODO"       [2023-01-18 Wed 14:07]
+- State "TODO"       from "DONE"       [2023-01-18 Wed 14:07]
+- State "DONE"       from "TODO"       [2023-01-18 Wed 14:07]
+- State "TODO"       from "DONE"       [2023-01-18 Wed 14:07]
+- State "DONE"       from "TODO"       [2023-01-18 Wed 14:07]
+:END:
 * DONE Rastafari
 CLOSED: [2023-01-18 Wed 14:01]
 :LOGBOOK:
