--- a/privat.org
+++ b/privat.org
@@ -1,5 +1,9 @@
-* STARTED Neuer Scheiß aus’m kalten Wohnzimmer
+* DONE Neuer Scheiß aus’m kalten Wohnzimmer
+CLOSED: [2023-01-18 Wed 20:37]
 :LOGBOOK:
+- State "DONE"       from "TODO"       [2023-01-18 Wed 20:37]
+- State "TODO"       from "DONE"       [2023-01-18 Wed 20:37]
+- State "DONE"       from "STARTED"    [2023-01-18 Wed 20:37]
 - State "STARTED"    from "TODO"       [2023-01-18 Wed 14:07]
 - State "TODO"       from "DONE"       [2023-01-18 Wed 14:07]
 - State "DONE"       from "TODO"       [2023-01-18 Wed 14:07]
@@ -7,8 +11,10 @@
 - State "DONE"       from "TODO"       [2023-01-18 Wed 13:56]
 - State "TODO"       from              [2023-01-18 Wed 13:38]
 :END:
-* TODO Willkommen Christian
+* DONE Willkommen Christian
+CLOSED: [2023-01-18 Wed 20:37]
 :LOGBOOK:
+- State "DONE"       from "TODO"       [2023-01-18 Wed 20:37]
 - State "TODO"       from "DONE"       [2023-01-18 Wed 14:07]
 - State "DONE"       from "TODO"       [2023-01-18 Wed 14:07]
 - State "TODO"       from "DONE"       [2023-01-18 Wed 14:07]
@@ -16,9 +22,11 @@
 - State "TODO"       from "DONE"       [2023-01-18 Wed 14:07]
 - State "DONE"       from "TODO"       [2023-01-18 Wed 14:07]
 :END:
-* DONE Rastafari
-CLOSED: [2023-01-18 Wed 14:01]
+* NEXT Rastafari
 :LOGBOOK:
+- State "NEXT"       from "DONE"       [2023-01-18 Wed 20:36]
+- State "DONE"       from "TODO"       [2023-01-18 Wed 20:36]
+- State "TODO"       from "DONE"       [2023-01-18 Wed 20:36]
 - State "DONE"       from "STARTED"    [2023-01-18 Wed 14:01]
 - State "STARTED"    from "DONE"       [2023-01-18 Wed 13:32]
 - State "DONE"       from "TODO"       [2023-01-18 Wed 13:32]
