--- a/privat.org
+++ b/privat.org
@@ -33,3 +33,5 @@ CLOSED: [2023-01-18 Wed 20:37]
 - State "TODO"       from "DONE"       [2023-01-18 Wed 13:32]
 - State "DONE"       from "TODO"       [2023-01-18 Wed 13:32]
 :END:
+TODO Willkommen Christian
+TODO Rastafari
