--- a/privat.org
+++ b/privat.org
@@ -1,3 +1,7 @@
+* TODO Simsalabim
+:LOGBOOK:
+- State "TODO"       from              [2023-01-18 Wed 20:44]
+:END:
 * DONE Neuer Scheiß aus’m kalten Wohnzimmer
 CLOSED: [2023-01-18 Wed 20:37]
 :LOGBOOK:
