--- a/privat.org
+++ b/privat.org
@@ -1,8 +1,8 @@
-* TODO Simsalabim
+* WAITING Simsalabim
 :LOGBOOK:
 - State "TODO"       from              [2023-01-18 Wed 20:44]
 :END:
-* DONE Neuer Scheiß aus’m kalten Wohnzimmer
+* WAITING Neuer Scheiß aus’m kalten Wohnzimmer
 CLOSED: [2023-01-18 Wed 20:37]
 :LOGBOOK:
 - State "DONE"       from "TODO"       [2023-01-18 Wed 20:37]
@@ -15,7 +15,7 @@ CLOSED: [2023-01-18 Wed 20:37]
 - State "DONE"       from "TODO"       [2023-01-18 Wed 13:56]
 - State "TODO"       from              [2023-01-18 Wed 13:38]
 :END:
-* DONE Willkommen Christian
+* WAITING Willkommen Christian
 CLOSED: [2023-01-18 Wed 20:37]
 :LOGBOOK:
 - State "DONE"       from "TODO"       [2023-01-18 Wed 20:37]
@@ -26,7 +26,7 @@ CLOSED: [2023-01-18 Wed 20:37]
 - State "TODO"       from "DONE"       [2023-01-18 Wed 14:07]
 - State "DONE"       from "TODO"       [2023-01-18 Wed 14:07]
 :END:
-* NEXT Rastafari
+* WAITING NEXT Rastafari
 :LOGBOOK:
 - State "NEXT"       from "DONE"       [2023-01-18 Wed 20:36]
 - State "DONE"       from "TODO"       [2023-01-18 Wed 20:36]
