--- a/privat.org
+++ b/privat.org
@@ -3,40 +3,14 @@
 - State "STARTED"    from "TODO"       [2023-01-19 Thu 11:21]
 + State "TODO"       from              [2023-01-18 Wed 20:44]
 :END:
-* WAITING Neuer Scheiß aus’m kalten Wohnzimmer
+* DONE Neuer Scheiß aus’m kalten Wohnzimmer
 CLOSED: [2023-01-18 Wed 20:37]
 :LOGBOOK:
 - State "DONE"       from "TODO"       [2023-01-18 Wed 20:37]
 - State "TODO"       from "DONE"       [2023-01-18 Wed 20:37]
 - State "DONE"       from "STARTED"    [2023-01-18 Wed 20:37]
-- State "STARTED"    from "TODO"       [2023-01-18 Wed 14:07]
-- State "TODO"       from "DONE"       [2023-01-18 Wed 14:07]
-- State "DONE"       from "TODO"       [2023-01-18 Wed 14:07]
-- State "TODO"       from "DONE"       [2023-01-18 Wed 14:01]
-- State "DONE"       from "TODO"       [2023-01-18 Wed 13:56]
-- State "TODO"       from              [2023-01-18 Wed 13:38]
 :END:
-* WAITING Willkommen Christian
+* TODO Willkommen Christian
 CLOSED: [2023-01-18 Wed 20:37]
 :LOGBOOK:
-- State "DONE"       from "TODO"       [2023-01-18 Wed 20:37]
-- State "TODO"       from "DONE"       [2023-01-18 Wed 14:07]
-- State "DONE"       from "TODO"       [2023-01-18 Wed 14:07]
-- State "TODO"       from "DONE"       [2023-01-18 Wed 14:07]
-- State "DONE"       from "TODO"       [2023-01-18 Wed 14:07]
-- State "TODO"       from "DONE"       [2023-01-18 Wed 14:07]
-- State "DONE"       from "TODO"       [2023-01-18 Wed 14:07]
 :END:
-* WAITING NEXT Rastafari
-:LOGBOOK:
-- State "NEXT"       from "DONE"       [2023-01-18 Wed 20:36]
-- State "DONE"       from "TODO"       [2023-01-18 Wed 20:36]
-- State "TODO"       from "DONE"       [2023-01-18 Wed 20:36]
-- State "DONE"       from "STARTED"    [2023-01-18 Wed 14:01]
-- State "STARTED"    from "DONE"       [2023-01-18 Wed 13:32]
-- State "DONE"       from "TODO"       [2023-01-18 Wed 13:32]
-- State "TODO"       from "DONE"       [2023-01-18 Wed 13:32]
-- State "DONE"       from "TODO"       [2023-01-18 Wed 13:32]
-:END:
-TODO Willkommen Christian
-TODO Rastafari
