--- a/privat.org
+++ b/privat.org
@@ -3,9 +3,10 @@
 - State "STARTED"    from "TODO"       [2023-01-19 Thu 11:21]
 + State "TODO"       from              [2023-01-18 Wed 20:44]
 :END:
-* WAITING Neuer Scheiß aus’m kalten Wohnzimmer
-CLOSED: [2023-01-18 Wed 20:37]
+* DONE Neuer Scheiß aus’m kalten Wohnzimmer
+CLOSED: [2023-01-19 Thu 11:27]
 :LOGBOOK:
+- State "DONE"       from "WAITING"    [2023-01-19 Thu 11:27]
 - State "DONE"       from "TODO"       [2023-01-18 Wed 20:37]
 - State "TODO"       from "DONE"       [2023-01-18 Wed 20:37]
 - State "DONE"       from "STARTED"    [2023-01-18 Wed 20:37]
