--- a/privat.org
+++ b/privat.org
@@ -3,4 +3,10 @@
 CLOSED: [2023-01-19 Thu 11:31]
 * DONE Neuer Scheiß aus’m kalten Wohnzimmer
 CLOSED: [2023-01-19 Thu 11:27]
-* WAITING Willkommen Christian
+* TODO Willkommen Christian
+:LOGBOOK:
+- State "TODO"       from "DONE"       [2023-01-19 Thu 11:46]
+- State "DONE"       from "TODO"       [2023-01-19 Thu 11:46]
+- State "TODO"       from "DONE"       [2023-01-19 Thu 11:45]
+- State "DONE"       from "WAITING"    [2023-01-19 Thu 11:45]
+:END:
