--- a/solabcon.org
+++ b/solabcon.org
@@ -1,4 +1,6 @@
 * Solabcon ToDO Liste
+* TODO Angebot Ringe
 * TODO Rechnung Service Baxter schreiben
 * TODO TRELLEBORG wg alter Movis PCs kontaktieren
+* TODO Angebot Sanner
 
