--- a/einkauf.org
+++ b/einkauf.org
@@ -1,4 +1,5 @@
 * TODO Geld für Woche holen 100€
 * TODO Insulin aus Apotheke holen
 * TODO <2023-01-20 Fr 15:55> Abholung Öle Isa 55€
+* TODO 35a 3 M6 28B
 
