--- a/einkauf.org
+++ b/einkauf.org
@@ -1,5 +1,10 @@
 * TODO Geld für Woche holen 100€
 * TODO Insulin aus Apotheke holen
 * TODO <2023-01-20 Fr 15:55> Abholung Öle Isa 55€
-* TODO 35a 3 M6 28B
+* Giang Nam
+** Tel: 034158156615
+** TODO 35a Sot Den - Dunkle Soße mit Tofu
+** TODO 3 - Mini Frühlingsrollen 9 Stk.
+** TODO M6 - Avocado Maki
+** TODO 28b - Bun Nam Bo - Reisfadennudeln mit Huhn
 
