--- a/solabcon.org
+++ b/solabcon.org
@@ -1,6 +1,7 @@
 * Solabcon ToDO Liste
 * TODO Angebot Ringe
-* WAITING Sanner Modell Aufnahme 3D
+* DONE Sanner Modell Aufnahme 3D
+CLOSED: [2023-01-23 Mon 11:23]
 * TODO Angebot Deckelanpassung Unterstützung Aufnahme
 * TODO Rechnung Service Baxter schreiben
 * TODO Angebot Sanner Rezepte neue Werkzeuge
