--- a/privat.org
+++ b/privat.org
@@ -2,3 +2,5 @@
 * TODO Knolle Waging überweisen
 * TODO Anhörungsbogen Stadt Leipzig
 * TODO GEZ bezahlen
+* DONE Zahnarzt Kuntze
+CLOSED: [2023-01-23 Mon 12:55]
