--- a/privat.org
+++ b/privat.org
@@ -2,5 +2,7 @@
 * TODO Knolle Waging überweisen
 * TODO Anhörungsbogen Stadt Leipzig
 * TODO GEZ bezahlen
-* DONE Zahnarzt Kuntze
+* DONE Zahnarzt Kuntze Termin vereinbart
 CLOSED: [2023-01-23 Mon 12:55]
+* TODO Zahnarzttermin Kuntze
+DEADLINE: <2023-02-02 Do 8:30>
