--- a/solabcon.org
+++ b/solabcon.org
@@ -2,7 +2,9 @@
 * DONE Angebot Ringe
 * DONE Sanner Modell Aufnahme 3D
 CLOSED: [2023-01-23 Mon 11:23]
-* TODO Angebot Deckelanpassung Unterstützung Aufnahme
+* DONE Angebot Deckelanpassung Unterstützung Aufnahme
+CLOSED: [2023-01-23 Mon 16:40]
+- State "DONE"       from "TODO"       [2023-01-23 Mon 16:40]
 * TODO Rechnung Service Baxter schreiben
 * TODO Angebot Sanner Rezepte neue Werkzeuge
 * TODO TRELLEBORG wg alter Movis PCs kontaktieren
