--- a/privat.org
+++ b/privat.org
@@ -4,3 +4,5 @@
 * TODO GEZ bezahlen
 * DONE Zahnarzt Kuntze Termin vereinbart
 CLOSED: [2023-01-23 Mon 13:05]
+* TODO Tilda Einhorn
+* TODO howto consolidate email repo on two pcs
