--- a/einkauf.org
+++ b/einkauf.org
@@ -1,12 +1,15 @@
 * Giang Nam
 ** Tel: 034158156615
 ** DONE 35a Sot Den - Dunkle Soße mit Tofu
+CLOSED: [2023-02-17 Fri 18:07]
+** TODO 3x 3 - Mini Frühlingsrollen 9 Stk.
+** TODO 2x M6 - Avocado Maki
+** DONE 20b - Bun Nam Bo - Reisfadennudeln mit Huhn
 CLOSED: [2023-01-23 Mon 11:22]
-** DONE 3 - Mini Frühlingsrollen 9 Stk.
-CLOSED: [2023-01-23 Mon 11:22]
-** DONE M6 - Avocado Maki
-CLOSED: [2023-01-23 Mon 11:22]
-** DONE 28b - Bun Nam Bo - Reisfadennudeln mit Huhn
-CLOSED: [2023-01-23 Mon 11:22]
-* TODO Briefmarken 
+* TODO 3x Zitronen
+* TODO 3x Grapefruit
+* TODO Röstzwiebeln
+* TODO Äpfel
+* TODO Möhren
+* TODO Stangensellerie 
 
