README.org aktualisieren

--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
 # org
-* es geht noch mehr mit mir im Gewand
+* so so also noch mehr es geht noch mehr mit mir im Gewand
 * NEXT ne Katze Oha
 :LOGBOOK:
 - State "NEXT"       from              [2023-01-18 Wed 11:56]
