--- a/README.org
+++ b/README.org
@@ -1,6 +1,4 @@
-* TODO neuer Liebe im
-Garten
-
+* TODO neuer Liebe im Garten
 * TODO Das reicht nicht!
-* mirko
+* mirko mit 10.000 Euro
 ** Unterpunkt so nicht von mir
