--- a/inbox.org
+++ b/inbox.org
@@ -1,4 +1,4 @@
-* Inbox on the go funzt das wirklich mit allen in der WG?
+* TODO Inbox MAGA?
 * DONE Ida Check Aufstehzeit
 * DONE Zähringer nachhaken Freitag 
 * DONE Weiterer Verwirrungsplan von Putin
