--- a/solabcon.org
+++ b/solabcon.org
@@ -13,12 +13,14 @@ Erläuterungen
 :LOGBOOK:
 - State "STARTED"    from "DONE"       [2024-11-18 Mon 13:11]
 :END:
-* TODO Rechnung Service Baxter schreiben
+* TODO Rechnung Service Baxter schreiben                            :#outdated:
 :LOGBOOK:
 - State "TODO"       from "DONE"       [2024-11-18 Mon 12:35]
 :END:
 * TODO Ein neuer Weg
 :LOGBOOK:
+- State "TODO"       from "DONE"       [2024-11-19 Tue 13:44]
+- State "DONE"       from "TODO"       [2024-11-19 Tue 13:44]
 - State "TODO"       from "DONE"       [2024-11-19 Tue 13:36]
 - State "DONE"       from "TODO"       [2024-11-19 Tue 13:32]
 :END:
