--- a/inbox.org
+++ b/inbox.org
@@ -1,5 +1,5 @@
 * DONE Weiterer Verwirrungsplan von Putin
-* TODO Ida Check Aufstehzeit
+* WAITING Ida Check Aufstehzeit
 :LOGBOOK:
 - State "TODO"       from "DONE"       [2024-11-19 Tue 13:55]
 :END:
