--- a/inbox.org
+++ b/inbox.org
@@ -1,6 +1,10 @@
 * DONE Weiterer Verwirrungsplan von Putin
-* TODO Ida Check Aufstehzeit
+* STARTED Ida Check Aufstehzeit
 :LOGBOOK:
+- State "STARTED"    from "DONE"       [2024-11-19 Tue 13:58]
+- State "DONE"       from "TODO"       [2024-11-19 Tue 13:57]
+- State "TODO"       from "DONE"       [2024-11-19 Tue 13:57]
+- State "DONE"       from "TODO"       [2024-11-19 Tue 13:57]
 - State "TODO"       from "DONE"       [2024-11-19 Tue 13:55]
 :END:
 * WAITING wann funzt das alles mal?
