--- a/inbox.org
+++ b/inbox.org
@@ -1,3 +1,4 @@
+* TODO automatische Synchronisation der TODOs mit T480s org-mode inbox
 * DONE Weiterer Verwirrungsplan von Putin
 * STARTED Ida Check Aufstehzeit
 * WAITING Ida Check Aufstehzeit
