--- a/inbox.org
+++ b/inbox.org
@@ -1,3 +1,7 @@
+* TODO Noch n Test
+:LOGBOOK:
+- State "TODO"       from              [2024-11-20 Wed 11:21]
+:END:
 * TODO Flächenelemente Konstruktion
 :LOGBOOK:
 - State "TODO"       from              [2024-11-19 Tue 15:05]
