--- a/solabcon.org
+++ b/solabcon.org
@@ -1,4 +1,8 @@
 #+TODO: TODO STARTED BLOCKED WAITING | DONE CANCELLED
+* TODO Bibotest
+:LOGBOOK:
+- State "TODO"       from              [2024-11-20 Wed 11:20]
+:END:
 * TODO Jetzt noch so ein paar Aufgaben reinhacken
 :LOGBOOK:
 - State "TODO"       from              [2024-11-19 Tue 13:39]
