--- a/inbox.org
+++ b/inbox.org
@@ -10,4 +10,4 @@
 :LOGBOOK:
 - State "TODO"       from              [2024-11-19 Tue 14:14]
 :END:
-* TODO Mal ein großer Test
+* TODO Mal ein großer Test mit der heißen Düse
