--- a/solabcon.org
+++ b/solabcon.org
@@ -1,5 +1,5 @@
 #+TODO: TODO STARTED BLOCKED WAITING | DONE CANCELLED
-* TODO Bibotest mit Nachtrag 33
+* TODO Bibotest mit Nachtrag 33 mal anders so
 :LOGBOOK:
 - State "TODO"       from              [2024-11-20 Wed 11:20]
 :END:
