--- a/solabcon.org
+++ b/solabcon.org
@@ -20,9 +20,10 @@
 :LOGBOOK:
 - State "TODO"       from              [2024-11-19 Tue 13:39]
 :END:
-* DONE Solabcon ToDO Liste
-CLOSED: [2024-11-20 Wed 13:49]
+* CANCELLED Solabcon ToDO Liste
+CLOSED: [2024-11-20 Wed 13:55]
 :LOGBOOK:
+- State "CANCELLED"  from "DONE"       [2024-11-20 Wed 13:55]
 - State "DONE"       from "STARTED"    [2024-11-20 Wed 13:49]
 - State "STARTED"    from "DONE"       [2024-11-18 Mon 13:11]
 :END:
